fixed autoplay issue on low power mode on safari

--- a/src/Home/style.css
+++ b/src/Home/style.css
@@ -26,6 +26,9 @@
   object-fit: cover;
   object-position: center;
 }
+.v0 img {
+  transform: scale(1.2);
+}
 .v0 {
   grid-column: 5/9;
   grid-row: 3/6;
@@ -60,15 +63,10 @@
 }
 
 @media screen and (max-width: 650px) {
-  /* .box img {
-    height: 150%;
-  } */
   .v0 img,
   .v6 img {
     width: 175%;
     object-position: bottom;
-    /* width: calc(100% + 50px);
-    height: calc(100% + 50px); */
   }
 }
 
